@startuml
!pragma layout smetana
skinparam classAttributeIconSize 0

interface KategorieView <<protocol>>{
    +build_ui(): list[ft.Row]
    +extract(): list[ft.Row]
}


class StudiumKategorieView {
    -modul: TextField
    -gruppenarbeit: RadioGroup

    +<<constructor>> __init__()
    +build_ui(): list[ft.Row]
    +extract(): dict[str, Any]
}

class HaushaltKategorieView {
    -wiederkehrend: RadioGroup

    +<<constructor>>__init__()
    +build_ui(): list[ft.Row]
    +extract(): dict[str, Any]
}

class FreizeitKategorieView {
    -hobby: TextField
    -ort: TextField

    +<<constructor>>__init__()
    +build_ui(): list[ft.Row]
    +extract(): dict[str, Any]
}

KategorieView <|.. StudiumKategorieView
KategorieView <|.. HaushaltKategorieView
KategorieView <|.. FreizeitKategorieView


@enduml